--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "next": "15.1.5",
     "next-auth": "^4.24.11",
     "next-themes": "^0.4.4",
+    "pdfjs-dist": "^3.4.120",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-dropzone": "^14.3.5",
@@ -39,6 +40,7 @@
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "@types/webpack": "^5.28.5",
     "eslint": "^9",
     "eslint-config-next": "15.1.5",
     "postcss": "^8",
